<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/CME_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CME_button_name" />

            <Button
                android:id="@+id/GST_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GST_button_name" />

            <Button
                android:id="@+id/FLR_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FLR_button_name" />

            <Button
                android:id="@+id/Saved_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Saved_button_name" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>